<resources>
    <string name="app_name">DaunSehat</string>
    <string name="app_logo_desc">Logo Aplikasi</string>
    <string name="onboarding_image_desc">Ilustrasi onboarding</string>
    <string name="txt_onboarding_title">Deteksi Penyakit Tanaman dengan Mudah!</string>
    <string name="txt_onboarding_desc">Ambil atau unggah foto tanaman Anda, dan kami akan membantu mendeteksi penyakit serta memberikan solusi terbaik untuk perawatan.</string>
    <string name="reminder_image_desc">Ilustrasi reminder</string>
    <string name="viewer_image_desc">Ilustrasi viewer</string>
    <string name="scan_menu_desc">Menu Deteksi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="invalid_password_error">Password minimal 8 karakter</string>
    <string name="invalid_email_error">Email tidak valid</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_login_text">Masuk</string>
    <string name="btn_register_text">Daftar</string>
    <string name="repeat_password">Ulangi password</string>
    <string name="welcome_txt">Selamat Datang!</string>
    <string name="txt_login_desc">Silakan masuk untuk melanjutkan</string>
    <string name="txt_forgot_password">Lupa Password?</string>
    <string name="txt_register_question">Belum punya akun?</string>
    <string name="txt_register">Daftar</string>
    <string name="txt_register_desc">Buat Akun</string>
    <string name="text_login_question">Sudah punya akun?</string>
    <string name="txt_login">Masuk</string>
    <string name="name">Nama</string>
    <string name="input_name">Masukkan nama lengkap</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>