<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.authentication.register.presentation.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txt_register_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/txt_register_desc"
            style="@style/TextHeadlineMedium"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/container_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_register_message">

            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_edit_text_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:boxStrokeErrorColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_text_view">

                <com.example.daunsehat.features.authentication.customview.EmailEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:background="@drawable/rounded_stroke_4" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_edit_text_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_edit_text_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_text_view">

                <EditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:autofillHints="name"
                    android:background="@drawable/rounded_stroke_4"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/password"
                android:textColor="@color/black"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_edit_text_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_edit_text_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:boxStrokeErrorColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_text_view">

                <com.example.daunsehat.features.authentication.customview.PasswordEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:background="@drawable/rounded_stroke_4"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/repeat_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/repeat_password"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_edit_text_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repeat_password_edit_text_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:boxStrokeErrorColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repeat_password_text_view">

                <com.example.daunsehat.features.authentication.customview.PasswordEditText
                    android:id="@+id/repeat_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:background="@drawable/rounded_stroke_4"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_register"
            style="@style/TextLabelLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register_text"
            android:textColor="@color/material_on_primary_emphasis_high_type"
            app:backgroundTint="@color/primary"
            app:cornerRadius="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_edit_text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/txt_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_login_question"
                style="@style/TextBodySmall"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_login"
                style="@style/TextBodySmall"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintStart_toEndOf="@id/txt_question"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="4dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminate="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>