<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.homepage.presentation.HomePageFragment">

    <TextView
        android:id="@+id/txt_greeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Hello, user!"
        style="@style/TextHeadlineLarge"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/img_logo"
        app:layout_constraintTop_toTopOf="@id/img_logo"
        app:layout_constraintBottom_toBottomOf="@id/img_logo"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"/>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/app_logo_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_reminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/primary"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_reminder"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/reminder_image_desc"
                android:src="@drawable/img_reminder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_reminder"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/txt_month_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Oktober 2024"
                        style="@style/TextBodyMedium"
                        android:textStyle="bold"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_reminder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:thumbTint="@color/secondary"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </LinearLayout>

                <GridLayout
                    android:id="@+id/calendarGrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:columnCount="7"
                    android:rowCount="6"
                    android:orientation="horizontal"
                    android:padding="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/txt_next_alarm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pengingat pada"
                        style="@style/TextBodySmall"
                        android:textStyle="bold"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/txt_alarm_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="16:00"
                        style="@style/TextBodySmall"
                        android:background="@drawable/box_alarm_time"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/section_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/card_reminder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            style="@style/TextHeadlineSmall"
            android:textStyle="bold"
            android:text="Rawat Tanaman Bersama DaunSehat" />

        <ImageView
            android:id="@+id/img_description"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/img_viewer"
            android:contentDescription="@string/viewer_image_desc" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_tips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/section_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <TextView
            android:id="@+id/txt_tips_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Tips Perawatan"
            style="@style/TextHeadlineSmall"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_show_all" />

        <Button
            android:id="@+id/btn_show_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lihat Semua"
            style="@style/TextBodyMedium"
            android:backgroundTint="@android:color/transparent"
            android:textColor="@color/black"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_tips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_tips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>